updating backend pipeline and adding frontend dashboard