@@ -1,6 +1,7 @@
 package com.placement.automation.service;
 
 import org.springframework.ai.chat.client.ChatClient;
+import org.springframework.ai.openai.OpenAiChatOptions;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -14,13 +15,15 @@ public class MessageFilterService {
         this.chatClient = chatClientBuilder.build();
     }
 
+    // Quick LLM check to filter out casual chatter and detect placement notices
     public boolean isJobDescription(String rawMessage) {
-        if (rawMessage == null || rawMessage.trim().isEmpty()) {
+        if (rawMessage == null || rawMessage.isBlank()) {
             return false;
         }
 
         try {
             String response = this.chatClient.prompt()
+                    .options(OpenAiChatOptions.builder().withMaxTokens(5).build())
                     .system("Analyze if this message is a job opening, internship description, or placement post. Reply with ONLY 'yes' or 'no'.")
                     .user(rawMessage)
                     .call()
